Mon Feb 24 17:22:05 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* io-identity.c (diskfs_S_io_identity): Pass CRED's shadow root
	inode number to fshelp_get_identity when creating a shadow root
	fsid, not INUM.

Sat Feb 22 00:00:32 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* io-stat.c (diskfs_S_io_stat): Mark shadow roots with S_IROOT.
	* io-identity.c (diskfs_S_io_identity): Return different fsys ids
	for different shadow roots.

	* peropen-rele.c (diskfs_release_peropen): Don't deadlock if PO's
	shadow_root is also it's node.
	* file-reparent.c (diskfs_S_file_reparent): Don't release a
	reference to any old shadow_root if it was == NODE.  Don't aquire
	a new reference for NODE.

Fri Feb 21 17:12:04 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-init.c (diskfs_init_dir): Use CRED->po as LOOKUPCRED's po,
	so that root detection works (and doesn't crash).

Thu Feb 20 00:43:38 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* io-read.c (diskfs_S_io_read): Support reading from sylinks.
	* dir-lookup.c (diskfs_S_dir_lookup): Allow symlinks to be opened
	for O_READ.

Thu Feb 13 19:27:16 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-rename.c (diskfs_S_dir_rename): Return EXDEV if FROMCRED and
	TOCRED are in different shadow trees.

	* file-reparent.c (diskfs_S_file_reparent): New function, from
	dir-reparent.c.
	* dir-reparent.c: File removed.
	* Makefile (FSSRCS): dir-reparent.c replaced by file-reparent.c.

Wed Feb 12 14:23:15 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* peropen-make.c (diskfs_make_peropen): Add & use CONTEXT param.
	Remove DOTDOT & DEPTH params.
	* fsys-getroot.c (diskfs_S_fsys_getroot): Pass a prototype peropen
	instead of the dotdotport and depth to diskfs_make_peropen.
	* fsys-getfile.c (diskfs_S_fsys_getfile): Likewise.
	* file-exec.c (diskfs_S_file_exec): Likewise.
	* dir-reparent.c (diskfs_S_dir_reparent): Likewise.
	* dir-mkfile.c (diskfs_S_dir_mkfile): Likewise.
	* dir-lookup.c (diskfs_S_dir_lookup): Likewise.